# learngithub-actions

./: Notes.txt  README.md  pyproject.toml  sample_lint.yml  setup.py  test.py
.github/workflows/: print_hello.yml  prt-hello.yml  publish-example-pack-test-pypi.yml  publish-vijsample-pack-pypi.yml  release_ver_pypi.yml  sample-lint.yml
src/example_package_vijkan/: example.py
src/example_package_vijkan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vijsamplepackage/: greet.py
vijsamplepackage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
